--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,5 @@
-@import "App";
+@import "sass/variables";
 
+@import "App";
+@import "components/Home/Home";
+@import "components/Navigation/Navigation";
