--- a/src/index.scss
+++ b/src/index.scss
@@ -2,4 +2,6 @@
 
 @import "App";
 @import "components/Home/Home";
+@import "components/Renders/Renders";
 @import "components/Navigation/Navigation";
+
