--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,13 @@
 // Colors
 $color-white: white;
+$color-yellow: yellow;
 
 $overlay-dark: rgba(0,0,0,0.3);
-$overlay_light: rgba(255,255,255,0.3)
+$overlay_light: rgba(255,255,255,0.3);
+$overlay-yellow: rgba(255,255,0,0.3);
+
+// Fonts
+$font-main: 'Roboto Mono', monospace;
+$font-secondary: 'Abel', sans-serif;
+// Margins
+$page-margin: 50px;
