--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,22 @@
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
+  box-sizing: border-box;
+}
+
+a{
+  text-decoration: none;
+  font-family: $font-secondary;
+  letter-spacing: 2px;
+}
+
+h1{
+  font-family: $font-main;
+  font-size: 40px;
+}
+
+h2{
+  font-family: $font-main;
+  font-size: 20px;
+  font-weight: lighter;
 }
