--- a/src/components/Renders/Renders.scss
+++ b/src/components/Renders/Renders.scss
@@ -1,12 +1,17 @@
 .renders{
-  margin: $page-margin;
+  height: 100vh;
+  background-color: $overlay-dark;
+
+  &__container{
+    margin: 0 $page-margin;
+  }
 
   &__content{
     display: flex;
   }
 
   &__image{
-    width: 50%;
+    width: 90%;
     margin-left: auto;
     img{
       width: 100%;
