Landing Page Component

--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -1,8 +1,7 @@
-.home{
+.landing{
   height: 100vh;
 
   &__background-image{
-    background: url("../../imgs/home.jpg");
     height: 100%;
     background-size: cover;
     background-position: center;
