--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,9 @@ a{
   text-decoration: none;
   font-family: $font-secondary;
   letter-spacing: 2px;
+  *{
+    color: initial !important;
+  }
 }
 
 h1{
