--- a/src/index.scss
+++ b/src/index.scss
@@ -4,4 +4,5 @@
 @import "components/Home/Home";
 @import "components/Renders/Renders";
 @import "components/Navigation/Navigation";
+@import "components/Landing/Landing";
 
