--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,10 +1,11 @@
 // Colors
 $color-white: white;
 $color-yellow: yellow;
+$color-black: black;
 
-$overlay-dark: rgba(0,0,0,0.3);
+$overlay-dark: rgba(0,0,0,0.6);
 $overlay_light: rgba(255,255,255,0.3);
-$overlay-yellow: rgba(255,255,0,0.3);
+$overlay-yellow: rgba(255,255,0,0.6);
 
 // Fonts
 $font-main: 'Roboto Mono', monospace;
