--- a/src/index.scss
+++ b/src/index.scss
@@ -8,4 +8,7 @@
 @import "components/Navigation/Navigation";
 @import "components/Landing/Landing";
 @import "components/Gallery/Gallery";
+@import "components/Section/Section";
+@import "components/AboutUs/AboutUs";
+@import "components/Profile/Profile";
 
