--- a/src/App.scss
+++ b/src/App.scss
@@ -27,4 +27,16 @@ h2{
   font-family: $font-main;
   font-size: 20px;
   font-weight: lighter;
+  margin-bottom: 20px;
+}
+
+h3{
+  font-family: $font-main;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+p{
+  font-family: $font-secondary;
+  font-size: 16px;
 }
