--- a/src/index.scss
+++ b/src/index.scss
@@ -11,4 +11,5 @@
 @import "components/Section/Section";
 @import "components/AboutUs/AboutUs";
 @import "components/Profile/Profile";
+@import "components/ContactForm/ContactForm";
 
