--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,6 +2,8 @@
 $color-white: white;
 $color-yellow: yellow;
 $color-black: black;
+$color_grey: gray;
+$color-grey-light: #FAFAFA;
 
 $overlay-dark: rgba(0,0,0,0.6);
 $overlay_light: rgba(255,255,255,0.3);
