--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -14,3 +14,8 @@ $font-main: 'Roboto Mono', monospace;
 $font-secondary: 'Abel', sans-serif;
 // Margins
 $page-margin: 50px;
+$mobile-page-margin: 20px;
+
+//Media Widths
+$tablet-width: 768px;
+$desktop-width: 1024px;
