--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -14,6 +14,9 @@
   }
 
   &__text{
-    margin: 0 $page-margin;
+    margin: 0 $mobile-page-margin;
+    @include desktop(){
+      margin: 0 $page-margin;
+    }
   }
 }
