--- a/src/components/Renders/Renders.scss
+++ b/src/components/Renders/Renders.scss
@@ -5,11 +5,16 @@
   background-repeat: no-repeat;
 
   &__container{
-    margin: 0 $page-margin;
+    margin: 0 $mobile-page-margin;
+    @include desktop() {
+      margin: 0 $page-margin;
+    }
   }
 
   &__content{
-    display: flex;
+    @include tablet() {
+      display: flex;
+    }
   }
 
   &__image{
