--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -2,22 +2,32 @@
   $id: &;
 
   &__container {
-    display: flex;
-    height: 50vh;
+    @include tablet() {
+      display: flex;
+      height: 50vh;
+    }
 
     #{$id}__side {
-      width: 50%;
+      @include tablet() {
+        width: 50%;
+      }
 
       #{$id}__image{
-        height: 100%;
+        height: 200px;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+        @include tablet(){
+          height: 100%;
+        }
       }
 
       #{$id}__context{
         margin-top: 30px;
-
+        @include tablet-max(){
+          margin-bottom: 30px;
+          text-align: center;
+        }
         h2{
           margin-bottom: 20px;
         }
